feat: add personalised daily walking goals
